--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="sp-navi-li">
             <div class="sp-navi-item"><a href=""><img src="images/top_sp/fb.png" alt="" srcset="images/top_sp/fb@2x.png 2x" /></a></div>
             <div class="sp-navi-item"><a href=""><img src="images/top_sp/insta.png" alt="" srcset="images/top_sp/insta@2x.png 2x" /></a></div>
-            <div class="sp-navi-item-toggle"><a href=""><img src="images/top_sp/menu_icon.png" alt="" srcset="images/top_sp/menu_icon@2x.png 2x" /></a>
+            <div class="sp-navi-item-toggle"><img src="images/top_sp/menu_icon.png" alt="" srcset="images/top_sp/menu_icon@2x.png 2x" />
               <ul class="p-menu-toggle">
-                <li><a href="">Login</a></li>
-                <li><a href="">Cart</a></li>
-                <li><a href="">Mypage</a></li>
-                <li><a href="">Shopping guide</a></li>
+                <li><a href="">ログイン</a></li>
+                <li><a href="">カート</a></li>
+                <li><a href="">マイページ</a></li>
+                <li><a href="">ショッピングガイド</a></li>
               </ul>
             </div>
           </div>
@@ -86,19 +86,19 @@
             <div class="article-box">
               <img src="images/top/item_01.jpg" alt="">
               <p class="product name">商品名が入ります商品名が入ります商品名が入ります</p>
-              <p class="tax">金額が入ります。</p>
+              <p class="tax">￥１０，０００（tax in）</p>
             </div>
 
             <div class="article-box">
               <img src="images/top/item_02.jpg" alt="">
               <p class="product name">商品名が入ります商品名が入ります商品名が入ります</p>
-              <p class="tax">金額が入ります。</p>
+              <p class="tax">￥１０，０００（tax in）</p>
             </div>
 
             <div class="article-box">
               <img src="images/top/item_03.jpg" alt="">
               <p class="product name">商品名が入ります商品名が入ります商品名が入ります</p>
-              <p class="tax">金額が入ります。</p>
+              <p class="tax">￥１０，０００（tax in）</p>
             </div>
 
             <div class="article-box">
@@ -290,8 +290,10 @@
               </div>
                 <ul class="info">
                   <li class="info-img">
-                    <img src="images/top/about_img.jpg">
-                    <div>
+                    <div class="info-img01">
+                      <img src="images/top/about_img.jpg">
+                    </div>
+                    <div class="info-img02">
                       <p class="info-p">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
                       <div><a href="" class="more">MORE</a></div>
                     </div>
@@ -308,10 +310,12 @@
                  </div>
                 <ul class="info">
                   <li class="info-img">
-                    <img src="images/top/shopinfo_img.jpg">
-                    <div>
+                    <div class="info-img01">
+                      <img src="images/top/shopinfo_img.jpg">
+                    </div>
+                    <div class="info-img02">
                       <p class="info-p">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
-                      <div class="more-button"><a href="" class="more">MORE</a></div>
+                      <div><a href="" class="more">MORE</a></div>
                     </div>
                     </li>
                 </ul>
