--- a/list.html
+++ b/list.html
@@ -51,12 +51,12 @@
           <div class="sp-navi-li">
             <div class="sp-navi-item"><a href=""><img src="images/top_sp/fb.png" alt="" srcset="images/top_sp/fb@2x.png 2x" /></a></div>
             <div class="sp-navi-item"><a href=""><img src="images/top_sp/insta.png" alt="" srcset="images/top_sp/insta@2x.png 2x" /></a></div>
-            <div class="sp-navi-item-toggle"><a href=""><img src="images/top_sp/menu_icon.png" alt="" srcset="images/top_sp/menu_icon@2x.png 2x" /></a>
-              <ul class="p-menu-toggle">
-                <li><a href="">Login</a></li>
-                <li><a href="">Cart</a></li>
-                <li><a href="">Mypage</a></li>
-                <li><a href="">Shopping guide</a></li>
+            <div class="sp-navi-item-toggle"><img src="images/top_sp/menu_icon.png" alt="" srcset="images/top_sp/menu_icon@2x.png 2x" />
+               <ul class="p-menu-toggle">
+                <li><a href="">ログイン</a></li>
+                <li><a href="">カート</a></li>
+                <li><a href="">マイページ</a></li>
+                <li><a href="">ショッピングガイド</a></li>
               </ul>
             </div>
           </div>
@@ -293,9 +293,11 @@
               </div>
                 <ul class="info">
                   <li class="info-img">
-                    <img src="images/top/about_img.jpg">
-                    <div>
-                      <p>お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
+                    <div class="info-img01">
+                      <img src="images/top/about_img.jpg">
+                    </div>
+                    <div class="info-img02">
+                      <p class="info-p">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
                       <div><a href="" class="more">MORE</a></div>
                     </div>
                   </li>
@@ -311,15 +313,17 @@
                  </div>
                 <ul class="info">
                   <li class="info-img">
-                    <img src="images/top/shopinfo_img.jpg">
-                    <div>
-                      <p>お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
+                    <div class="info-img01">
+                      <img src="images/top/shopinfo_img.jpg">
+                    </div>
+                    <div class="info-img02">
+                      <p class="info-p">お店の説明お店の説明お店の説明が入りますお店の説明お店の説明お店の説明</p>
                       <div><a href="" class="more">MORE</a></div>
                     </div>
                     </li>
                 </ul>
             </div>
-
+            
           </div>
 <!-----shop-info終わり----->
 
