--- a/products.html
+++ b/products.html
@@ -97,7 +97,7 @@
         <div class="product-name">
           <div class="product-name01">
             <p class="product-name02">商品名が入ります</p>
-            <p>fa0001-91</p>
+            <p class="product-name03">fa0001-91</p>
           </div>
           <div class="product-img-top">
             <div class="img-click">
@@ -129,7 +129,7 @@
             <div class="products-price02">
               <div class="product-title">
                 <div class="border"><img src="images/products/title_price.png"></div>
-                <p class="p-price"><span class=span01>¥1000</span><span class=span02>(tax in)</span></p>
+                <p class="p-price"><span class=span01>1000</span><span class=span02>(tax in)</span></p>
               </div>
               <div class="border-bottom">
                 <div>
@@ -144,7 +144,7 @@
           </div>
           <p class="heading01">商品説明</p>
           <p class="heading02">■説明タイトル説明タイトル説明タイトル説明タイトル</p>
-          <p>説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト
+          <p class="heading03">説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト
           <br>説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト
           <br>説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</p>
           <table>
